# jsoncpp

./: .gitignore  README.md  benchmark.bat  benchmark.bat~  config_debug.bat  config_release.bat  meson.build  meson_cheatsheet.txt  meson_configurations.txt
all_benchmark_data/: characteristic_results.xlsx  example.json  json_results.xlsx  type_results.xlsx
all_benchmark_data/depth_data/: jsongen_depth_100.json  jsongen_depth_1000.json  jsongen_depth_200.json  jsongen_depth_300.json  jsongen_depth_400.json  jsongen_depth_500.json  jsongen_depth_600.json  jsongen_depth_700.json  jsongen_depth_800.json  jsongen_depth_900.json
all_benchmark_data/member_data/: jsongen_member_100.json  jsongen_member_1000.json  jsongen_member_200.json  jsongen_member_300.json  jsongen_member_400.json  jsongen_member_500.json  jsongen_member_600.json  jsongen_member_700.json  jsongen_member_800.json  jsongen_member_900.json
all_benchmark_data/new_nopmr_jsconcpp/: characteristic_benchmark_new_nopmr_results.csv  json_benchmark_new_nopmr_json.csv  type_benchmark_new_nopmr.csv
all_benchmark_data/new_pmr_jsoncpp/: c_benchmark_new_pmr_results.csv  new_pmr_benchmarks.cpp  type_benchmark_new_pmr.csv
all_benchmark_data/original_jsoncpp/: characteristic_benchmark_og.csv  json_benchmark_og_results.csv  original_benchmarks.cpp  type_benchmark_og.csv
all_benchmark_data/string_data/: jsongen_str_0.json  jsongen_str_1000.json  jsongen_str_1200.json  jsongen_str_1400.json  jsongen_str_1600.json  jsongen_str_1800.json  jsongen_str_200.json  jsongen_str_2000.json  jsongen_str_400.json  jsongen_str_600.json  jsongen_str_800.json
devtools/: buildtype_print.ps1
example/: value_tests.cpp
example/readFromStream/: readFromStream.cpp
example/readFromString/: readFromString.cpp
include/json/: allocator.h  config.h  json.h  json_features.h  reader.h  resource.h  value.h  version.h
src/google_benchmark/: main.cpp
src/lib_json/: json_reader.cpp  json_resource.cpp  json_value.cpp
test/benchmark_data/: o_results.txt  o_results_secure.txt  result.xlsx  results.txt  results_secure.txt  test.json  x.json
